# esp32gong

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  data2h.py  eclipseincludesettings.xml  partitions.csv  sdkconfig  togzip.py
components/dotstarstripe/: CMakeLists.txt  DotstarStripe.cpp  DotstarStripe.h
components/esp-request/: component.mk  esp_request.h
components/espstring/: CMakeLists.txt  EspString.cpp  EspString.h
components/esputil/: CMakeLists.txt  temperature.h
components/espweb/: CMakeLists.txt  HttpRequestParser.h  HttpResponse.h  HttpResponseParser.h  Url.cpp  UrlParser.h  WebServer.cpp  certkey.pem  component.mk
components/filesystem/: CMakeLists.txt  FileSystem.h
components/i2splayer/: CMakeLists.txt  I2SPlayer.cpp  I2SPlayer.h  Wav.cpp  Wav.h
components/mongoose/: mongoose.h
components/ota/: CMakeLists.txt  Ota.cpp  Ota.h
components/pingwatchdog/: CMakeLists.txt  PingWatchdog.cpp  PingWatchdog.h
components/spiffs/: esp_spiffs.h
components/web/: CMakeLists.txt  HttpResponseParser.cpp  IPAddress.cpp  StringParser.cpp  Url.h  UrlParser.cpp  WebClient.cpp  WebClient.h  WebServer.cpp  WebServer.h
components/yuarel/: yuarel.h
data/: cert.pem  index.html  key.pem
go/src/firmwareserver/: firmwareserver.go  http.cmd  https.cmd  server.crt  server.key
main/: ApiStore.cpp  ApiStore.h  CMakeLists.txt  Config.cpp  Config.h  Config.hpp  CriticalSection.cpp  CriticalSection.h  DnsSrv.cpp  DnsSrv.h  DnsSrv.hpp  DotstarStripe.cpp  DownAndUploadHandler.h  DownloadHandler.h  DownloadHandler.h.old  DownloadHandler.hpp  DynamicRequestHandler.cpp  DynamicRequestHandler.h  DynamicRequestHandler.hpp  DynamicRequestHandlerOld.cpp  DynamicRequestHandlerOld.h  Esp32Gong.cpp  Esp32Gong.cpp.bak  Esp32Gong.h  Esp32Gong.hpp  Esp32GongWebServer.cpp  Esp32GongWebServer.h  EspString.cpp  FileSystem.cpp  FileSystem.h  HttpParser.cpp  HttpParser.hpp  HttpRequestParser.cpp  HttpRequestParser.h  HttpRequestParser.hpp  HttpResponse.cpp  HttpResponse.h  HttpResponse.hpp  HttpResponseParser.cpp  HttpResponseParser.h  (+59 more)
msys32/etc/profile.d/: myinit.sh
oldstuff/: DynamicRequestHandlerOld.cpp.txt
